import public "common_client.proto";
package ddproto;

//请求得到在线奖励
message award_req_online {
    optional ProtoHeader header = 1;
}

message ward_ack_online {
    optional int64 coin = 1; //奖励金币的数量
    optional int64 duration = 2; //下次可以领取的时间
    optional int64 changeCoin = 3; //增加的金币

}

//请求得到在线奖励
message award_req_onlineInfo {
    optional ProtoHeader header = 1;
}

message award_ack_onlineInfo {
    optional int64 duration = 1; //下次可以领取的时间间隔
}

//请求得到新手奖励
message award_req_getNewUser {
    optional ProtoHeader header = 1;
}

//回复
message award_ack_getNewUser {
    optional ProtoHeader header = 1;
}
