syntax = "proto2";
import public "common_client.proto";
import public "common_mj.proto";
package ddproto;

message game_req_buxiazi {
    optional ProtoHeader header = 1;
    optional uint32 userId = 2; // 发起请求的人
}

message game_ack_buxiazi {
    optional ProtoHeader header = 1;
    repeated CardInfo buCards = 2; //补起来了牌
    optional int32 xiaCouont = 3; // 虾的数量
    repeated CardInfo moCards = 4; //补起来了牌
    optional uint32 userId = 5; // 发起请求的人
    optional bool IsZhuoXiaBu = 6; //是否是做虾子的补：捉虾子的时候为true 杠的时候为false
}
